--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nprogress": "0.2.0",
     "vue": "2.5.10",
     "vue-count-to": "^1.0.13",
+    "vue-moment": "^3.2.0",
     "vue-router": "3.0.1",
     "vuex": "3.0.1"
   },
